--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   lucide_icons: ^0.257.0
   gap: ^3.0.1
   intl: ^0.20.2
+  google_fonts: ^6.3.3
 
 dev_dependencies:
   flutter_test:
@@ -78,12 +79,10 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+  fonts:
+    - family: Jokker VF-TRIAL
+      fonts:
+        - asset: assets/fonts/JokkerVF-TRIAL.ttf
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
