--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,11 @@ dependencies:
   lucide_icons: ^0.257.0
   gap: ^3.0.1
   google_fonts: ^6.3.3
+  riverpod: ^3.0.3
+  dio: ^5.9.0
+  cached_network_image: ^3.4.1
+  flutter_riverpod: ^3.0.3
+  riverpod_annotation: ^3.0.3
 
 dev_dependencies:
   flutter_test:
@@ -52,6 +57,10 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^6.0.0
+  riverpod_generator: ^3.0.3
+  build_runner: ^2.10.4
+  custom_lint: ^0.8.1
+  riverpod_lint: ^3.0.3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
