--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,9 @@ dependencies:
   cached_network_image: ^3.4.1
   flutter_riverpod: ^3.0.3
   riverpod_annotation: ^3.0.3
+  flutter_secure_storage: ^9.2.4
+  fpdart: ^1.2.0
+  go_router: ^17.0.0
 
 dev_dependencies:
   flutter_test:
