--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   flutter_secure_storage: ^9.2.4
   fpdart: ^1.2.0
   go_router: ^17.0.0
+  shared_preferences: ^2.5.4
 
 dev_dependencies:
   flutter_test:
