--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   fpdart: ^1.2.0
   go_router: ^17.0.0
   shared_preferences: ^2.5.4
+  pinput: ^6.0.1
 
 dev_dependencies:
   flutter_test:
