--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,9 @@ dependencies:
   go_router: ^17.0.0
   shared_preferences: ^2.5.4
   pinput: ^6.0.1
+  freezed: ^3.2.3
+  json_annotation: ^4.9.0
+  freezed_annotation: ^3.1.0
 
 dev_dependencies:
   flutter_test:
@@ -65,6 +68,7 @@ dev_dependencies:
   build_runner: ^2.10.4
   custom_lint: ^0.8.1
   riverpod_lint: ^3.0.3
+  json_serializable: ^6.11.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
