--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   freezed: ^3.2.3
   json_annotation: ^4.9.0
   freezed_annotation: ^3.1.0
+  google_maps_places_autocomplete_widgets: ^1.3.3
 
 dev_dependencies:
   flutter_test:
